.provarCaches/00D410000011HE0EAM/objects/rstkf__apinprocchk__c.object
<CustomObject>
    <description>apinprocchk__c - This record is used during Quick Payments.  It is created when a new Check Number is retrieved from a GLBANKACCT.  It should then be deleted during the save of the APINVTXN.  If it is not deleted then the transaction was aborted and this becomes an audit record of the unused Check Number.</description>
    <fields>
        <fullName>rstkf__apinprocchk_bankacct__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>rstkf__glbankacct__c</referenceTo>
        <relationshipLabel>In Process Checks</relationshipLabel>
        <relationshipName>apinprocchks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinprocchk_checknumber__c</fullName>
        <label>Check Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__apinprocchk_cmpno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>In Process Checks</relationshipLabel>
        <relationshipName>apinprocchks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__apinprocchk_source__c</fullName>
        <label>Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apinprocchk_cmpno__r.rstkf__glcmp_cmpno__r.rstk__sycmp_cmpno__c + &apos;_&apos; +  rstkf__apinprocchk_bankacct__r.rstkf__glbankacct_number__c + &apos; (&apos; +  rstkf__apinprocchk_checknumber__c + &apos;)&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>In Process Check</label>
    <listViews>
        <fullName>rstkf__RS_In_Process_Checks</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinprocchk_cmpno__c</columns>
        <columns>rstkf__apinprocchk_bankacct__c</columns>
        <columns>rstkf__apinprocchk_checknumber__c</columns>
        <columns>rstkf__apinprocchk_source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>In Process Checks</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstkf__RS_In_Process_Checks_Filtered</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinprocchk_cmpno__c</columns>
        <columns>rstkf__apinprocchk_bankacct__c</columns>
        <columns>rstkf__apinprocchk_checknumber__c</columns>
        <columns>rstkf__apinprocchk_source__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>In Process Checks - Filtered</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>In Process Checks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>